import online movie database

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         <section>
           <h2>Recently Watched</h2>
           <hr>
-          <div class="recently">
+          <div id="moviesContainer" class="recently">
             <div class="recently-placeholder"></div>
             <div class="recently-placeholder"></div>
             <div class="recently-placeholder"></div>
